--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
 asgiref==3.4.1
+beautifulsoup4==4.9.3
 confusable-homoglyphs==3.2.0
-Django==1.11.17
-django-registration==3.2
+Django==3.2.5
+django-bootstrap3==14.3.0
+django-bootstrap4==3.0.1
+django-registration==3.0
 django-tinymce==3.3.0
 psycopg2==2.9.1
 pytz==2021.1
+soupsieve==2.2.1
 sqlparse==0.4.1
