--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,17 @@
 asgiref==3.4.1
 beautifulsoup4==4.9.3
 confusable-homoglyphs==3.2.0
+dj-database-url==0.5.0
 Django==1.11.17
 django-bootstrap3==14.3.0
 django-bootstrap4==3.0.1
+django-heroku==0.3.1
 django-registration==3.0
 django-tinymce==3.3.0
+gunicorn==20.1.0
 psycopg2==2.8.6
+python-decouple==3.4
 pytz==2021.1
 soupsieve==2.2.1
 sqlparse==0.4.1
+whitenoise==5.3.0
